# Anti-Virus

./: Cargo.toml  README.md
AV/: Cargo.toml
AV/src/: av_engine.rs  gui.rs  logging.rs  main.rs
Installer/: Cargo.toml
Installer/src/: main.rs
src/: allow_list.rs  av_engine.rs  gui.rs  logging.rs  main.rs  process_handling.rs
