[package]
name = "AV"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.9"
ctrlc = "3.4.0"
colored = "3.0.0"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
iced = { version = "0.13.1", features = ["tokio", "smol"] }
"windows" = { version = "0.61.3", features = ["Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Security_WinTrust", "Win32_NetworkManagement_NetManagement", "Win32_Security",
                                                "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", ] }